--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
   cupertino_icons: ^1.0.8
   http:  ^1.3.0
   shared_preferences: ^2.0.11
+  permission_handler: ^11.4.0  # Vérifiez la dernière version disponible
+  qr_code_scanner_plus: ^2.0.0 
+  audioplayers: ^6.2.0
+  flutter_map: ^8.1.0
+  location: ^8.0.0
+  latlong2: ^0.9.1
+
+
+
 
 dev_dependencies:
   flutter_test:
