--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   fl_chart: ^0.70.2
   toggle_switch: ^2.1.0
   smooth_page_indicator: ^1.0.0+2
+  syncfusion_flutter_charts: ^29.1.35
 
 
 
@@ -78,6 +79,10 @@ flutter:
     - assets/location.png
     - assets/user.png
     - assets/diagram.png
+    - assets/scan.png
+    - assets/setting.png
+    - assets/money.png
+    
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
